src/internal/components/series-marker/styles.scss
/*
 Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
 SPDX-License-Identifier: Apache-2.0
*/

@use "../../styles" as styles;
@use "../../../../node_modules/@cloudscape-design/design-tokens/index.scss" as cs;

$marker-size: 16px;
$marker-inline-size: 25px; // marker-inline-size is greater than marker-size, to have space for the (potential) status marker.
$marker-margin-top: cs.$space-static-xxxs;
$marker-margin-right: cs.$space-static-xxs;

.marker {
  @include styles.styles-reset;
  margin-block-start: $marker-margin-top;
  border-start-start-radius: 2px;
  border-start-end-radius: 2px;
  border-end-start-radius: 2px;
  border-end-end-radius: 2px;
  inline-size: $marker-inline-size;
  block-size: $marker-size;
  flex-shrink: 0;
  cursor: inherit;
}

.visually-hidden {
  position: absolute !important;
  inset-block-start: -9999px !important;
  inset-inline-start: -9999px !important;
}

